# cspi-qe-dev

./: .gitignore  README.md  pyproject.toml
cspi_qe_dev/ci_operator/: abc.py  api.py  ci_operator.py  common.py  enum.py  org.py  ref.py  repo.py  yaml_config.py
cspi_qe_dev/ref_sandbox/: api.py  core.py
cspi_qe_dev/tests/: conftest.py  test_sandbox.py
